scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics12.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,1): error TS8009: The 'declare' modifier can only be used in TypeScript files.


==== /a.js (1 errors) ====
    declare var v;
    ~~~~~~~
!!! error TS8009: The 'declare' modifier can only be used in TypeScript files.